# tag2-backend-network-discovery

./: .env.example  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build_module.yml  cibuildhweel.yml
controller/: main.py  requirements.txt
service/: CMakeLists.txt
service/cmake/: util.cmake
service/cmake/Modules/: FindLibevent.cmake
service/include/TagTwo/Networking/: NetworkService.h  ServiceDiscoveryClient.h  ServiceDiscoveryRecord.h
service/include/TagTwo/Networking/GameSocket/: GameSocket.h  GameSocketClientSSL.h  GameSocketProtocol.h  GameSocketServer.h
service/include/TagTwo/Networking/Protocols/: NumpyBufferProtocol.h
service/include/TagTwo/Networking/Queue/: NNGClient.h
service/include/TagTwo/Networking/ServiceDiscovery/: ServiceDiscoveryClient.h  ServiceDiscoveryRecord.h
service/include/TagTwo/Networking/Util/: ErrorUtil.h  SSLUtil.h  SocketUtil.h
service/include/TagTwo/Util/: Dotenv.h  JsonBuilder.h
service/src/: NetworkService.cpp  ServiceDiscoveryClient.cpp  ServiceDiscoveryRecord.cpp  main.cpp  main_socketserver.cpp  network_service_python_bindings.cpp  service_discovery_client_python_bindings.cpp
service/src/GameSocket/: GameSocket.cpp  GameSocketClientSSL.cpp  GameSocketProtocol.cpp  GameSocketServer.cpp
service/src/util/: DotEnv.cpp  ErrorUtil.cpp  JsonBuilder.cpp  SSLUtil.cpp
web/: index.html
