[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.26.1",
    "pybind11[global]>=2.10.4",
    "cibuildwheel"
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
build = "cp36-* cp37-* cp38-* cp39-*"
#test_requires = ["pytest"]
#test_command = "pytest {project}/tests"
#before-build = "pip install -r {project}/requirements.txt"
